--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
     <title>three.js webgl - geometry - cube</title>
-    <meta charset="utf-8">
-    <style>
-      body {
-        margin: 0px;
-        background-color: #fffa00;
-        overflow: hidden;
-      }
-      #v {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        opacity: 0.0;
-      }
-      #c {
-        background: rgba(0, 0, 0, 0);
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <meta charset='utf-8'>
+    <link rel='stylesheet' type='text/css' href='room.css'>
+    <link rel='stylesheet' type='text/css' href='video.css'>
   </head>
   <body>
+    <nav><ul>
+      <li><button>Hermit Controller</button></li>
+      <li><button>Communal Controller</button></li>
+      <li><button>Community of Convenience Controller</button></li>
+      <li><button>Hobo Controller</button></li>
+      <li><button>Phalanstere Controller</button></li>
+      <li><button>Perma Controller</button></li>
+      <li><button>Bolo Controller</button></li>
+      <li><button>Out of Control Controller</button></li>
+    </ul></nav>
+
+    <div id='controllers' class='centered'>
+      <div id='hobo-controller' class='controller'>
+        <div id='hobo-button-1' class='button'></div>
+        <div id='hobo-button-2' class='button'></div>
+      </div>
+      <div id='x'></div>
+    </div>
+
     <!--
     <video id='v'></video>
     <canvas id='c'></canvas>
-    <script src="video.js"></script>
+    <script src='video.js'></script>
     -->
-    <script src="three.js"></script>
-    <script src="TrackballControls.js"></script>
-    <script src="room.js"></script>
+
+    <script src='three.js'></script>
+    <script src='TrackballControls.js'></script>
+    <script src='DDSLoader.js'></script>
+    <script src='TGALoader.js'></script>
+    <script src='MTLLoader.js'></script>
+    <script src='OBJMTLLoader.js'></script>
+    <!-- <script src='room.js'></script> -->
+
+    <script src='jquery-2.1.1.js'></script>
+    <script src='controllers.js'></script>
   </body>
 </html>
