now the controllers come up

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <nav><ul>
-      <li><button>Hermit Controller</button></li>
-      <li><button>Communal Controller</button></li>
-      <li><button>Community of Convenience Controller</button></li>
-      <li><button>Hobo Controller</button></li>
-      <li><button>Phalanstere Controller</button></li>
-      <li><button>Perma Controller</button></li>
-      <li><button>Bolo Controller</button></li>
-      <li><button>Out of Control Controller</button></li>
+      <li><button id='hermit'>Hermit Controller</button></li>
+      <li><button id='communal'>Communal Controller</button></li>
+      <li><button id='community'>Community of Convenience Controller</button></li>
+      <li><button id='hobo'>Hobo Controller</button></li>
+      <li><button id='phalanstere'>Phalanstere Controller</button></li>
+      <li><button id='perma'>Perma Controller</button></li>
+      <li><button id='bolo'>Bolo Controller</button></li>
+      <li><button id='out-of-control'>Out of Control Controller</button></li>
     </ul></nav>
 
-    <div id='controllers' class='centered'>
+    <div id='controllers' class='centered hidden'>
       <div id='hobo-controller' class='controller'>
         <div id='hobo-button-1' class='button'></div>
         <div id='hobo-button-2' class='button'></div>
