adding and removing controller dom shit

--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@
   </head>
   <body>
     <nav><ul>
-      <li><button id='hermit'>Hermit Controller</button></li>
       <li><button id='communal'>Communal Controller</button></li>
-      <li><button id='community'>Community of Convenience Controller</button></li>
+      <li><button id='community'>Convenience Controller</button></li>
       <li><button id='hobo'>Hobo Controller</button></li>
-      <li><button id='phalanstere'>Phalanstere Controller</button></li>
-      <li><button id='perma'>Perma Controller</button></li>
+      <li><button id='hermit'>Hermit Controller</button></li>
       <li><button id='bolo'>Bolo Controller</button></li>
       <li><button id='out-of-control'>Out of Control Controller</button></li>
+      <li><button id='safty'>Safty Controller</button></li>
+      <li><button id='phalanstere'>Phalanstere Controller</button></li>
     </ul></nav>
 
     <div id='controllers' class='centered hidden'>
+      <div id='communal-controller' class='controller'>
+        <div id='communal-button-1' class='button'></div>
+        <div id='communal-button-2' class='button'></div>
+        <div id='communal-button-3' class='button'></div>
+        <div id='communal-button-4' class='button'></div>
+        <div id='communal-button-5' class='button'></div>
+        <div id='communal-button-6' class='button'></div>
+        <div id='communal-button-7' class='button'></div>
+        <div id='communal-button-8' class='button'></div>
+      </div>
       <div id='hobo-controller' class='controller'>
         <div id='hobo-button-1' class='button'></div>
         <div id='hobo-button-2' class='button'></div>
