--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav><ul>
       <li><button id='communal'>Communal Controller</button></li>
-      <li><button id='community'>Convenience Controller</button></li>
+      <li><button id='convenience'>Convenience Controller</button></li>
       <li><button id='hobo'>Hobo Controller</button></li>
       <li><button id='hermit'>Hermit Controller</button></li>
       <li><button id='bolo'>Bolo Controller</button></li>
@@ -32,6 +32,11 @@
       <div id='hobo-controller' class='controller'>
         <div id='hobo-button-1' class='button'></div>
         <div id='hobo-button-2' class='button'></div>
+      </div>
+      <div id='convenience-controller' class='controller'>
+        <div id='convenience-button-1' class='button sticky'></div>
+        <div id='convenience-button-2' class='button sticky'></div>
+        <div id='convenience-button-3' class='button sticky'></div>
       </div>
       <div id='x'></div>
     </div>
