--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <div id='convenience-button-2' class='button sticky'></div>
         <div id='convenience-button-3' class='button sticky'></div>
       </div>
+      <div id='hermit-controller' class='controller'>
+        <div id='hermit-button-1' class='button sticky'></div>
+        <div id='hermit-button-2' class='button sticky'></div>
+        <div id='hermit-button-3' class='button sticky'></div>
+      </div>
       <div id='x'></div>
     </div>
 
