bolo, out of control, safety controllers

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <li><button id='hobo'>Hobo Controller</button></li>
       <li><button id='hermit'>Hermit Controller</button></li>
       <li><button id='bolo'>Bolo Controller</button></li>
-      <li><button id='out-of-control'>Out of Control Controller</button></li>
-      <li><button id='safty'>Safty Controller</button></li>
+      <li><button id='outofcontrol'>Out of Control Controller</button></li>
+      <li><button id='safety'>Safety Controller</button></li>
       <li><button id='phalanstere'>Phalanstere Controller</button></li>
     </ul></nav>
 
@@ -42,6 +42,29 @@
         <div id='hermit-button-1' class='button sticky'></div>
         <div id='hermit-button-2' class='button sticky'></div>
         <div id='hermit-button-3' class='button sticky'></div>
+      </div>
+      <div id='bolo-controller' class='controller'>
+        <div id='bolo-button-1' class='button'></div>
+        <div id='bolo-button-2' class='button'></div>
+        <div id='bolo-button-3' class='button'></div>
+        <div id='bolo-button-4' class='button'></div>
+      </div>
+      <div id='outofcontrol-controller' class='controller'>
+        <div id='outofcontrol-button-1' class='button'></div>
+        <div id='outofcontrol-button-2' class='button'></div>
+        <div id='outofcontrol-button-3' class='button'></div>
+        <div id='outofcontrol-button-4' class='button'></div>
+        <div id='outofcontrol-button-5' class='button'></div>
+        <div id='outofcontrol-button-6' class='button'></div>
+        <div id='outofcontrol-button-7' class='button'></div>
+        <div id='outofcontrol-button-8' class='button'></div>
+        <div id='outofcontrol-button-9' class='button'></div>
+        <div id='outofcontrol-button-10' class='button'></div>
+        <div id='outofcontrol-button-11' class='button'></div>
+      </div>
+      <div id='safety-controller' class='controller'>
+        <div id='safety-button-1' class='button sticky'></div>
+        <div id='safety-button-2' class='button sticky'></div>
       </div>
       <div id='x'></div>
     </div>
