--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
         <div id='safety-button-1' class='button sticky'></div>
         <div id='safety-button-2' class='button sticky'></div>
       </div>
+      <div id='phalanstere-controller' class='controller'>
+        <div id='phalanstere-button-1' class='button'></div>
+        <div id='phalanstere-button-2' class='button'></div>
+        <div id='phalanstere-button-3' class='button'></div>
+        <div id='phalanstere-button-4' class='button'></div>
+        <div id='phalanstere-button-5' class='button'></div>
+        <div id='phalanstere-button-6' class='button'></div>
+        <div id='phalanstere-button-7' class='button'></div>
+        <div id='phalanstere-button-8' class='button'></div>
+      </div>
       <div id='x'></div>
     </div>
 
