first for controller functions

--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
 
     <script src='three.js'></script>
     <script src='TrackballControls.js'></script>
-    <script src='DDSLoader.js'></script>
-    <script src='TGALoader.js'></script>
-    <script src='MTLLoader.js'></script>
-    <script src='OBJMTLLoader.js'></script>
-    <!-- <script src='room.js'></script> -->
+    <script src='OBJLoader.js'></script>
+    <script src='room.js'></script>
 
     <script src='jquery-2.1.1.js'></script>
     <script src='controllers.js'></script>
